# module_rag

./:  catalog.py  .gitignore  config.py  dataset.json  dataset_eval.json  evaluate.py  expander.py  fact_extractor.py  generation.py  indexer.py  indexer_2.py  list_disciplines.py  models.py  pipeline.py  prompts.py  pyproject.toml  requirements.txt  requirements_fixed.txt  reranker.py  retrieval.py  retrieval_2.py  router.py  rpd_names.json  rpd_names.txt  run.py  test.ipynb  test.py  time_filter.py  todo.md  todo.txt  verification.py
datasets/: dataset.json  ds_script.py  relation_ds.json  single_ds.json  single_ds_eval.json
datasets/datasets_router/: dataset.json  ds_script.py  relation_ds.json  router_check.json  router_check_eval.json  single_ds.json  single_ds_eval.json
datasets_router/: dataset.json  global_ds.json
results/deepseek_deepseek-v4-flash_10/: confusion_matrix.txt  results_live.jsonl  samples.csv  summary.json
results/moonshotai_kimi-k2.6_10/: confusion_matrix.txt  results_live.jsonl  samples.csv  summary.json
results/openai_gpt-oss-20b_10/: confusion_matrix.txt  results_live.jsonl  samples.csv  summary.json
results/qwen_qwen3-vl-30b-a3b-instruct_1/: confusion_matrix.txt  results_live.jsonl  samples.csv  summary.json
results/qwen_qwen3-vl-30b-a3b-instruct_10/: confusion_matrix.txt  results_live.jsonl  samples.csv  summary.json
scripts/: app.py  evaluate.py  run.py
staff/: indexing_doc1_logs.txt  indexing_doc1_logs_2  naive_rag.py  old_indexer.py  old_retrieval.py  prompts_storage.py  single_logs_10_04.txt  todo.md
(+28 files in other folders)
