[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "module-rag"
version = "0.1.0"
description = "RAG system for university discipline programs"
requires-python = ">=3.10"

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]